before adding attachments

--- a/SSDI.RequestMonitoring.UI/wwwroot/index.html
+++ b/SSDI.RequestMonitoring.UI/wwwroot/index.html
@@ -13,9 +13,12 @@
 
     <link rel="stylesheet" href="/css/fontface.css" />
     <link rel="stylesheet" href="/css/navbar.css" />
+    <link rel="stylesheet" href="/css/breadcrumb.css" />
     <link rel="stylesheet" href="/css/sidebar.css" />
-    <link rel="stylesheet" href="/css/page.css" />
+    <link rel="stylesheet" href="/css/pages/page.css" />
+    <link rel="stylesheet" href="/css/pages/pagedetails.css" />
     <link rel="stylesheet" href="/css/modal/modal.css" />
+    <link rel="stylesheet" href="/css/controls/tabs.css" />
     <link href="/lib/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
     <link href="/lib/bootstrap-icons/font/bootstrap-icons.min.css" rel="stylesheet" />
 </head>
