working first live

--- a/SSDI.RequestMonitoring.UI/wwwroot/index.html
+++ b/SSDI.RequestMonitoring.UI/wwwroot/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="/css/modal/modal.css" />
     <link rel="stylesheet" href="/css/controls/tabs.css" />
     <link rel="stylesheet" href="/css/controls/buttons.css" />
+    <link rel="stylesheet" href="/css/controls/metricscarousel.css" />
     <link href="/lib/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
     <link href="/lib/bootstrap-icons/font/bootstrap-icons.min.css" rel="stylesheet" />
 </head>
@@ -46,9 +47,7 @@
     <script src="/js/typingAnimation.js"></script>
     <script src="/js/exportAttach.js"></script>
 
-    <script>
-
-
+    <script> 
         function addResizeListener(dotNetHelper) {
             function updateSize() {
                 dotNetHelper.invokeMethodAsync('SetIsMobile', window.innerWidth);
