--- a/SSDI.RequestMonitoring.UI/wwwroot/index.html
+++ b/SSDI.RequestMonitoring.UI/wwwroot/index.html
@@ -13,7 +13,6 @@
     <link href="SSDI.RequestMonitoring.UI.styles.css" rel="stylesheet" />
 
     <link rel="stylesheet" href="/css/fontface.css" />
-    <link rel="stylesheet" href="/css/navbar.css" />
     <link rel="stylesheet" href="/css/breadcrumb.css" />
     <link rel="stylesheet" href="/css/sidebar.css" />
     <link rel="stylesheet" href="/css/notification.css" />
@@ -51,5 +50,6 @@
     <script src="_content/ChartJs.Blazor.Fork/ChartJsBlazorInterop.js"></script>
     <script src="/js/typingAnimation.js"></script>
     <script src="/js/exportAttach.js"></script> 
+    <script src="/js/signature.js"></script> 
 </body>
 </html>
