--- a/SSDI.RequestMonitoring.UI/wwwroot/index.html
+++ b/SSDI.RequestMonitoring.UI/wwwroot/index.html
@@ -51,5 +51,6 @@
     <script src="/js/typingAnimation.js"></script>
     <script src="/js/exportAttach.js"></script> 
     <script src="/js/signature.js"></script> 
+    <script src="/js/autocomplete.js"></script> 
 </body>
 </html>
